config/activemq/deployment/aro/amq-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: active-mq
  labels:
    name: active-mq
