config/activemq/deployment/aro/amq-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: amq
  namespace: active-mq
spec:
  host: active-mq.apps.$DOMAIN.$LOCATION.aroapp.io
  to:
    kind: Service
    name: active-mq
    weight: 100
  port:
    targetPort: openwire
  wildcardPolicy: None
